
SET(SRC_FILES 
	./main.cpp
)

SET(INCLUDE_DIRS
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/audio/include
    ${PROJECT_SOURCE_DIR}/qt/include
	${FFTW3F_INCLUDE_DIRS}
)

INCLUDE(${QT_USE_FILE})

SET(LIBRARIES
    ${QT_LIBRARIES} 
	${FFTW3F_LIBRARIES}
)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

ADD_EXECUTABLE(uspectrogram WIN32 ${SRC_FILES})
TARGET_LINK_LIBRARIES(uspectrogram utilite utilite_audio utilite_qt ${LIBRARIES})

INSTALL(TARGETS uspectrogram
        RUNTIME DESTINATION bin COMPONENT runtime
        LIBRARY DESTINATION lib COMPONENT devel
        ARCHIVE DESTINATION lib COMPONENT devel)